Revision history for Encode-Wechsler

0.02
    - pad parameter now determines amount of padding to apply

0.01
    - First version, released on an unsuspecting world.