@@ -15,7 +15,6 @@ is $wechsler->decode( 'xq4_27deee6' ),
 ..******.
 ...****..
 .........
-.........
 ", 'pad 1 - xq4_27deee6 decoded correctly';
 
 $wechsler = Encode::Wechsler->new( pad => 2 );
@@ -31,7 +30,6 @@ is $wechsler->decode( 'xs31_0ca178b96z69d1d96' ),
 ..*.....*....
 ..*.*.*.*....
 ...**.**.....
-.............
 .............
 .............
 ", 'pad 2 - xs31_0ca178b96z69d1d96 decoded correctly';
@@ -63,8 +61,6 @@ is $wechsler->decode( 'xp30_w33z8kqrqk8zzzx33' ),
 .............
 ......**.....
 ......**.....
-.............
-.............
 .............
 .............
 .............
@@ -109,8 +105,6 @@ is $wechsler->decode( 'xp30_ccx8k2s3yagzy3103yaheha4xcczyk1' ),
 .............................*.*....**....
 ............................*.*...........
 ............................*.............
-..........................................
-..........................................
 ..........................................
 ..........................................
 ..........................................
