@@ -2,6 +2,7 @@ Revision history for Encode-Wechsler
 
 0.02
     - pad parameter now determines amount of padding to apply
+    - results are trimmed of blank rows/cols on the edges
 
 0.01
     - First version, released on an unsuspecting world.
